fix for docs z-index issue when in narrow mode and the menu is open

--- a/docs/css/docco.css
+++ b/docs/css/docco.css
@@ -126,7 +126,7 @@ ul.sections {
 
 .annotation > * {
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
 #section-1 {
@@ -321,7 +321,7 @@ ul.sections > li > div {
     left: 0;
     bottom: 0;
     width: 250px;
-    z-index: 1;
+    z-index: 0;
     -webkit-box-shadow: 6px 0px 15px -13px black inset, -6px 0px 15px -13px black inset;
     -moz-box-shadow: 6px 0px 15px -13px black inset, -6px 0px 15px -13px black inset;
     -ms-box-shadow: 6px 0px 15px -13px black inset, -6px 0px 15px -13px black inset;
@@ -337,7 +337,7 @@ ul.sections > li > div {
   }
   section ul.sections {
     position: relative;
-    z-index: 2;
+    z-index: 1;
   }
 
   ul.sections > li > div.annotation ul, ul.sections > li > div.annotation ol {
